--- a/api/package.json
+++ b/api/package.json
@@ -7,10 +7,13 @@
     "devStart": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@vscode/sqlite3": "^5.0.8",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "knex": "^1.0.7",
+    "morgan": "~1.9.1",
+    "sqlite3": "^5.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
